# langchaintests

./: .gitignore  README.md
Git-Agent/: GitExamples.py  GitPython.py  PyGitHub.py
Git-Agent/agent2/: app.py  config.py
Git-Agent/agent2/agent/: tools.py
Git-Agent/agent2/components/: file_explorer.py  sidebar.py
Git-Agent/agent2/utils/: dev_operations.py  file_operations.py  git_operations.py  wrappers.py
Git-Agent/agent_new/: README.md  git_agent.py  git_functions.py  requirements.txt
Git-Agent/agent_new/old/: app2.py  debug_function.py  direct_file_ops.py  git_agent.py_old  git_functions.py  self_contained_solution.py  simplified_tools.py
Git-Agent/agent_pr/: agent_claude.py  agent_openai.py  notebook.ipynb  notebook_useful_function.ipynb
Git-Agent/agent_pr/agent-task/: array_products.py
Git-Agent/agent_pr/agent-task/task/: task.md
Rabbit-13min/notebooks/: langchain-13-min.ipynb
amld2025-multi-agents-workshop-main/: .env.example  README.md  pyproject.toml
amld2025-multi-agents-workshop-main/data/: bloomberg_financial_news_1k.pkl
amld2025-multi-agents-workshop-main/notebooks/: S1 - Introduction to LangChain and RAG.ipynb  S2 - Building a Multi-Agent System.ipynb
amld2025-multi-agents-workshop-main/solutions/: S1 - Introduction to LangChain and RAG.ipynb  S2 - Building a Multi-Agent System.ipynb
